# evm-verifier-playground

./: .env.deploy.example  .env.example  .gitignore  BENCHMARK.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  Makefile  Makefile.old  README.md  annotated_proof.json  fibonacci_proof.json  fibonacci_proof_big.json  foundry.toml  input.json  input_single_proof_fib.json  proof.json
examples/: README.md
examples/factorial/: factorial.cairo  factorial_compiled.json  input.json
examples/factorial-bootloader/: fact_topologies.json  input.json
examples/fibonacci/: README.md  fibonacci_compiled.json  input.json
examples/fibonacci-bootloader/: input.json
lib/evm-verifier-columns/: EcdsaPointsXColumn.sol  EcdsaPointsYColumn.sol  PedersenHashPointsXColumn.sol  PedersenHashPointsYColumn.sol  PoseidonPoseidonFullRoundKey0Column.sol  PoseidonPoseidonFullRoundKey1Column.sol  PoseidonPoseidonFullRoundKey2Column.sol  PoseidonPoseidonPartialRoundKey0Column.sol  PoseidonPoseidonPartialRoundKey1Column.sol
prover_settings/: cpu_air_params.json
script/: Deploy.s.sol  RegisterContinuousPages.s.sol  RegisterMemoryFacts.s.sol  VerifyProof.s.sol
scripts/: benchmark.sh  cairo-run-wrapper.sh  create_bootloader_input.py  generate_proof.sh  prepare-input.sh
scripts/calculate_fri_steps/: Cargo.toml
scripts/deploy/: Cargo.toml
scripts/prepare_input/: Cargo.toml
scripts/prepare_input/src/: lib.rs  main.rs
scripts/test/: Cargo.toml
scripts/verify_proof_split/: Cargo.toml
scripts/verify_proof_split/src/: main.rs
test/: CpuVerifier.t.sol  GpsStatementVerifier.t.sol
(+45 files in other folders)
