[package]
name = "prepare-input"
version = "0.1.0"
edition = "2021"

[lib]
name = "prepare_input"
path = "src/lib.rs"

[[bin]]
name = "prepare-input"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
regex = "1.10"
num-bigint = "0.4"
num-traits = "0.2"
ethers = { version = "2.0", features = ["abigen"] }
